# Design-Patterns

./: .gitignore  07-桥接模式.md  08-组合模式.md  09-享元模式.md  10-策略模式.md  11.命令模式.md  12.中介者模式.md  13.备忘录模式.md  14.模板方法模式.md  15.迭代器模式.md  16.状态模式.md  17.责任链模式.md  18.解释器模式.md  19.访问者模式.md  20.原型模式.md  21.适配器模式.md  22.代理模式.md  23.装饰模式.md  24.外观模式.md  999.商品筛选&搜索功能.lua  999.商品筛选功能.cpp  C++代理模式.md  C++单例模式-4种.md  C++工厂模式-3种.md  C++桥接模式.md  README.md
00-HeadFirst/01-Duck/: CMakeLists.txt
00-HeadFirst/01-Duck/behavior/: QuackMute.cpp  QuackMute.h  QuackSqueak.h
00-HeadFirst/01-Duck/duck/: MallardDuck.cpp
01-Duck/: CMakeLists.txt
01-Duck/behavior/: FlyWithWings.cpp  FlyWithWings.h  QuackBehavior.h  QuackSqueak.cpp
01-Duck/duck/: Duck.cpp  Duck.h
01-模板方法模式/: 01-模板方法模式.sln  Fighter.h  Warrior.h
02-工厂方法模式/: 02-工厂方法模式.vcxproj  02-工厂方法模式.vcxproj.filters  readme.md
02-简单工厂模式/: 02-简单工厂模式.sln  02-简单工厂模式.vcxproj  02-简单工厂模式.vcxproj.filters  CMakeLists.txt  M_Mechanic.h  MonsterFactory.h  main.cpp  readme.md
03-工厂方法模式/: 03-工厂方法模式.sln  Mechanic.h  Monster.h  MonsterFactory.h  Undead.h
03-抽象工厂模式/: 03-工厂方法模式.vcxproj  03-工厂方法模式.vcxproj.filters  ElementFactory.h  MechanicFactory.h  UndeadFactory.h  main.cpp
04-建造者模式/: 04-建造者模式.sln  04-建造者模式.vcxproj  04-建造者模式.vcxproj.filters  Element.h  ElementBuilder.h  MechanicBuilder.h  MonsterBuilder.h  MonsterDirector.h  UndeadBuilder.h  main.cpp
05-适配器模式/: 05-适配器模式.sln  05-适配器模式.vcxproj  05-适配器模式.vcxproj.filters  LogAdapter.h  LogToDB.h  LogToFile.h  main.cpp
06-观察者模式/: 06-观察者模式.sln  06-观察者模式.vcxproj  06-观察者模式.vcxproj.filters  Fighter.h  (+5 more)
(+187 files in other folders)
